# pyscreenshot

./: .gitignore  .gitmodules  20240828-Window_Log.md  DisShot.py  DummyFrame.py  PeriodicDialogBase.py  PyScreenShot.ini  PyScreenShot.py  PyScreenShot_seq_no_test.py  README.html  README.md  SettingsDialogBase.py  Test-config_manager.py  app.py  app_settings.py  buildGUI-nuitka.bat  buildGUI.bat  capture_manager.py  config.ini  config_default.ini  config_manager.py  dialog - 0910.wxg  dialog.wxg  dialogs.py  dumpForegroundWindow.py  hotkey_manager.py  hotkey_test.py  key_hotkey.py  make_resource_file.py  my-environments.txt  myFolders.ps1  myFolders_test.ps1  mydefine.py  myutils.py  packages.txt  pyproject.toml  pyscreenshot.wxg  pyscreenshot_res.py  requirements.txt  sound_manager.py  (+4 more)
Licenses/: LICENSE
experiment/: 20240827-Window_Log.md  calllater_test.py  check_sequence.py  config_default.py  config_empty.py  dumpForegroundWindow.py  enum_windows.py  hotkey_test.py  key_hotkey.py  key_logging.py  sound_manager.py  設計メモ.xlsx
make_res/: ScreenShot.ico.base64  make_res.py  menu_icon_Auto_save_folder.png.base64  menu_icon_Copy_to_clipboard.png.base64  menu_icon_Exit.png.base64  menu_icon_Help.png.base64  menu_icon_Open_folder.png.base64  menu_icon_Periodic_capture_settings.png.base64  menu_icon_Save_to_PNG.png.base64  menu_icon_Settings.png.base64  決定、ボタン押下8.wav.base64  警告音1.wav.base64
res/: app_icon.py  menu_image.py  res_func.py  sound.py
resource_data/: resource.txt
リソースデータ/: PyScreenShot-128.pdn  PyScreenShot-256.pdn  PyScreenShot-48.pdn
参考資料/: mssメモ.txt  (+1 more)
(+6 files in other folders)
